--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-to-print": "^2.15.1",
     "react-tooltip": "^5.27.1",
     "react-topbar-progress-indicator": "^4.1.1",
+    "recharts": "^3.2.0",
     "tailwind-merge": "^2.3.0",
     "vite-plugin-rewrite-all": "^1.0.2",
     "yup": "^1.4.0"
