--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
