--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.3.0",
     "react-dnd": "^16.0.1",
