--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-date-pickers": "^8.11.3",
     "@reduxjs/toolkit": "^2.2.6",
     "@tiptap/starter-kit": "^3.4.5",
+    "anarock-widgets": "^1.0.1",
     "axios": "^1.7.2",
     "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
