--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^3.8.0",
     "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.4",
     "@reduxjs/toolkit": "^2.2.6",
     "anarock-widgets": "^1.0.16",
     "axios": "^1.7.2",
